cards upload jpeg in progress
