# swagger.json
@@ -423,7 +423,7 @@
     "/cards/{editionId}": {
       "get": {
         "tags": ["Cards"],
-        "summary": "Get all cards tasks for current user",
+        "summary": "Get all cards for current edition",
         "security": [{ "Bearer": [] }],
         "parameters": [
           {
@@ -476,9 +476,9 @@
           "description": "Card's object",
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/PostCardRequest"
+                "$ref": "#/components/schemas/PostCardRequestWithJpeg"
               }
             }
           }
@@ -846,10 +846,105 @@
                       },
                       "cards": {
                         "type": "array",
-                        "description": "Edition's cards",
+                        "description": "Series's cards",
                         "items": {
-                          "type": "string",
-                          "description": "Edition's id cards"
+                          "type": "object",
+                          "properties": {
+                            "cardName": {
+                              "type": "string",
+                              "description": "Cards's name",
+                              "example": "Exposition Universelle2"
+                            },
+                            "cardDate": {
+                              "type": "string",
+                              "description": "Card's date. Format - year-month-day",
+                              "example": "2020-12-31"
+                            },
+                            "series": {
+                              "type": "string",
+                              "description": "Card's series id",
+                              "example": "507f1f77bcf86cd799439011"
+                            },
+                            "cardNumber": {},
+                            "edition": {
+                              "type": "string",
+                              "description": "Card's edition id",
+                              "example": "507f1f77bcf86cd799439011"
+                            },
+                            "circulation": {
+                              "type": "integer"
+                            },
+                            "uploadCardThumbnailJpj": {
+                              "type": "string",
+                              "description": "Cloud's Jpg url (created if 'file' field was provided while adding new card)"
+                            },
+                            "idCloudJpg": {
+                              "type": "string",
+                              "description": "Cloud's Webm id. Exists only with uploadCardThumbnailJpj",
+                              "example": "cardsJpg/arm1hze2vws2oe9inywy"
+                            },
+                            "uploadCardHighResWebm": {
+                              "type": "string",
+                              "description": "Cloud's Webm url (created if 'file' field was provided while adding new card)"
+                            },
+                            "idCloudWebm": {
+                              "type": "string",
+                              "description": "Cloud's Webm id. Exists only with uploadCardHighResWebm",
+                              "example": "cardsWebm/arm1hze2vws2oe9inywy"
+                            },
+                            "type": {
+                              "type": "string",
+                              "description": "Cards's type Options",
+                              "enum": [
+                                "Human",
+                                "Event",
+                                "Invention",
+                                "Artwork",
+                                "Special"
+                              ]
+                            },
+                            "rarity": {
+                              "type": "string",
+                              "description": "Cards's Rarity Options",
+                              "enum": [
+                                "Common",
+                                "Uncommon",
+                                "Rare",
+                                "Epic",
+                                "Legendary"
+                              ]
+                            },
+                            "categories": {
+                              "type": "array",
+                              "description": "Card's category",
+                              "items": {
+                                "type": "string"
+                              }
+                            },
+                            "description": {
+                              "type": "string",
+                              "description": "Information about card"
+                            },
+                            "goldenCard": {
+                              "type": "boolean",
+                              "description": "Card's status"
+                            },
+                            "openseaLink": {
+                              "type": "string",
+                              "description": "Golden Card link on OpenSea. Open only if Golden Card is true"
+                            },
+                            "artist": {
+                              "type": "string"
+                            },
+                            "animator": {
+                              "type": "string"
+                            },
+                            "id": {
+                              "type": "string",
+                              "description": "Cards's id",
+                              "example": "507f1f77bcf86cd799439011"
+                            }
+                          }
                         }
                       }
                     }
@@ -857,105 +952,10 @@
                 },
                 "cards": {
                   "type": "array",
-                  "description": "Series's cards",
+                  "description": "Edition's cards",
                   "items": {
-                    "type": "object",
-                    "properties": {
-                      "cardName": {
-                        "type": "string",
-                        "description": "Cards's name",
-                        "example": "Exposition Universelle2"
-                      },
-                      "cardDate": {
-                        "type": "string",
-                        "description": "Card's date. Format - year-month-day",
-                        "example": "2020-12-31"
-                      },
-                      "series": {
-                        "type": "string",
-                        "description": "Card's series id",
-                        "example": "507f1f77bcf86cd799439011"
-                      },
-                      "cardNumber": {},
-                      "edition": {
-                        "type": "string",
-                        "description": "Card's edition id",
-                        "example": "507f1f77bcf86cd799439011"
-                      },
-                      "circulation": {
-                        "type": "integer"
-                      },
-                      "uploadCardThumbnailJpj": {
-                        "type": "string",
-                        "description": "Cloud's Jpg url (created if 'file' field was provided while adding new card)"
-                      },
-                      "idCloudJpg": {
-                        "type": "string",
-                        "description": "Cloud's Webm id. Exists only with uploadCardThumbnailJpj",
-                        "example": "cardsJpg/arm1hze2vws2oe9inywy"
-                      },
-                      "uploadCardHighResWebm": {
-                        "type": "string",
-                        "description": "Cloud's Webm url (created if 'file' field was provided while adding new card)"
-                      },
-                      "idCloudWebm": {
-                        "type": "string",
-                        "description": "Cloud's Webm id. Exists only with uploadCardHighResWebm",
-                        "example": "cardsWebm/arm1hze2vws2oe9inywy"
-                      },
-                      "type": {
-                        "type": "string",
-                        "description": "Cards's type Options",
-                        "enum": [
-                          "Human",
-                          "Event",
-                          "Invention",
-                          "Artwork",
-                          "Special"
-                        ]
-                      },
-                      "rarity": {
-                        "type": "string",
-                        "description": "Cards's Rarity Options",
-                        "enum": [
-                          "Common",
-                          "Uncommon",
-                          "Rare",
-                          "Epic",
-                          "Legendary"
-                        ]
-                      },
-                      "categories": {
-                        "type": "array",
-                        "description": "Card's category",
-                        "items": {
-                          "type": "string"
-                        }
-                      },
-                      "description": {
-                        "type": "string",
-                        "description": "Information about card"
-                      },
-                      "goldenCard": {
-                        "type": "boolean",
-                        "description": "Card's status"
-                      },
-                      "openseaLink": {
-                        "type": "string",
-                        "description": "Golden Card link on OpenSea. Open only if Golden Card is true"
-                      },
-                      "artist": {
-                        "type": "string"
-                      },
-                      "animator": {
-                        "type": "string"
-                      },
-                      "id": {
-                        "type": "string",
-                        "description": "Cards's id",
-                        "example": "507f1f77bcf86cd799439011"
-                      }
-                    }
+                    "type": "string",
+                    "description": "Edition's id cards"
                   }
                 }
               }
@@ -1376,6 +1376,67 @@
           }
         }
       },
+      "PostCardRequestWithJpeg": {
+        "type": "object",
+        "properties": {
+          "cardName": {
+            "type": "string",
+            "description": "Cards's name",
+            "example": "Exposition Universelle2"
+          },
+          "cardDate": {
+            "type": "string",
+            "description": "Card's date. Format - year-month-day",
+            "example": "2020-12-31"
+          },
+          "cardNumber": {
+            "type": "string",
+            "description": "X/21 (X is the number of the card, 21 - is autofielled from Number of series cards  )",
+            "example": "1/21"
+          },
+          "circulation": {
+            "type": "integer"
+          },
+          "type": {
+            "type": "string",
+            "description": "Cards's type Options",
+            "enum": ["Human", "Event", "Invention", "Artwork", "Special"]
+          },
+          "rarity": {
+            "type": "string",
+            "description": "Cards's Rarity Options",
+            "enum": ["Common", "Uncommon", "Rare", "Epic", "Legendary"]
+          },
+          "description": {
+            "type": "string",
+            "description": "Information about card",
+            "example": "The fourth of eight expositions held in the portrait painting buy Italian artist Leonardo da Vinci..."
+          },
+          "goldenCard": {
+            "type": "boolean",
+            "description": "Card's status. In default - false",
+            "example": false
+          },
+          "openseaLink": {
+            "type": "string",
+            "description": "Golden Card link on OpenSea. Open only if Golden Card is true",
+            "example": "https://opensea.io"
+          },
+          "artist": {
+            "type": "string",
+            "example": "Claudio Bandoli"
+          },
+          "animator": {
+            "type": "string",
+            "example": "Claudio Bandoli"
+          },
+          "file": {
+            "type": "string",
+            "format": "binary",
+            "description": "Card's image"
+          }
+        }
+      },
       "UpdateCardRequest": {
         "type": "object",
         "properties": {
@@ -1410,7 +1471,7 @@
             "example": "507f1f77bcf86cd799439011"
           },
           "cardNumber": {
-            "type": "integer",
+            "type": "string",
             "description": "X/21 (X is the number of the card, 21 - is autofielled from Number of series cards  )",
             "example": "1/21"
           },
